fixed alignment issues

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,6 +1,5 @@
 .over-due {
     display: flex;
-    align-items: center;
     min-width: 100px;
    
     mat-icon {
