--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1436,7 +1436,7 @@ h6,
     position: absolute;
     right: 20px;
     top: 30px;
-    z-index: 999;
+    z-index: 998;
   }
 }
 .in-page-wrapper{
